--- a/scanner/scanner.csproj
+++ b/scanner/scanner.csproj
@@ -9,4 +9,8 @@
     <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+  </ItemGroup>
+
 </Project>
