--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -48,7 +48,7 @@ jobs:
   build:
     strategy:
       matrix:
-        configuration: [Debug]
+        configuration: [Release, Debug]
 
     runs-on:
       windows-latest # For a list of available runner types, refer to
@@ -91,11 +91,11 @@ jobs:
 
       # Create the app package by building and packaging the Windows Application Packaging project
       - name: Create the app package
-        run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx
+        run: msbuild $env:Wap_Project_Path /p:Configuration="$env:Configuration;Platform=$env:Appx_Bundle_Platforms" /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx
         env:
           Appx_Bundle: Always
-          Appx_Bundle_Platforms: Any CPU
-          Appx_Package_Build_Mode: StoreUpload
+          Appx_Bundle_Platforms: AnyCPU
+          Appx_Package_Build_Mode: SideloadOnly
           Configuration: ${{ matrix.configuration }}
 
       # Remove the pfx
