--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -101,6 +101,8 @@ jobs:
       # Remove the pfx
       - name: Remove the pfx
         run: Remove-Item -path $env:Wap_Project_Directory\$env:Signing_Certificate
+        env:
+          Sigining_Certificate: GitHubActionsWorkflow.pfx
 
       # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
       - name: Upload build artifacts
