--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -59,6 +59,7 @@ jobs:
       Test_Project_Path: scanner/scanner.csproj # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
       Wap_Project_Directory: setup # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
       Wap_Project_Path: setup/setup.wapproj # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
+      Sigining_Certificate: GitHubActionsWorkflow.pfx
 
     steps:
       - name: Checkout
@@ -86,12 +87,12 @@ jobs:
       - name: Decode the pfx
         run: |
           $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-          $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
+          $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath $env:Signing_Certificate
           [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
 
       # Create the app package by building and packaging the Windows Application Packaging project
       - name: Create the app package
-        run: msbuild $env:Wap_Project_Path /p:Configuration="$env:Configuration;Platform=$env:Appx_Bundle_Platforms" /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx
+        run: msbuild $env:Wap_Project_Path /p:Configuration="$env:Configuration;Platform=$env:Appx_Bundle_Platforms" /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=$env:Signing_Certificate
         env:
           Appx_Bundle: Always
           Appx_Bundle_Platforms: AnyCPU
@@ -101,8 +102,6 @@ jobs:
       # Remove the pfx
       - name: Remove the pfx
         run: Remove-Item -path $env:Wap_Project_Directory\$env:Signing_Certificate
-        env:
-          Sigining_Certificate: GitHubActionsWorkflow.pfx
 
       # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
       - name: Upload build artifacts
