--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -59,7 +59,7 @@ jobs:
       Test_Project_Path: scanner/scanner.csproj # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
       Wap_Project_Directory: setup # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
       Wap_Project_Path: setup/setup.wapproj # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
-      Sigining_Certificate: GitHubActionsWorkflow.pfx
+      Signing_Certificate: GitHubActionsWorkflow.pfx
 
     steps:
       - name: Checkout
